# export-aptos-verifier

./: .gitignore  Cargo.toml  README.md
crates/export_aptos_verifier_cli/: Cargo.toml  README.md
crates/export_aptos_verifier_cli/src/: main.rs
crates/export_aptos_verifier_cli/tests/: generate_cli.rs
crates/export_aptos_verifier_core/: Cargo.toml  README.md
crates/export_aptos_verifier_core/src/: error.rs  lib.rs  model.rs
crates/export_aptos_verifier_core/src/curves/: bls12381.rs  bn254.rs  mod.rs
crates/export_aptos_verifier_core/src/formats/: arkworks.rs  arkworks_compact.rs  gnark.rs  mod.rs  snarkjs_json.rs
crates/export_aptos_verifier_core/src/movegen/: context.rs  mod.rs  render.rs
crates/export_aptos_verifier_core/src/snarkjs/: parser.rs  validate.rs
crates/export_aptos_verifier_core/templates/: Move.toml.hbs  tests.move.hbs  verifier_bls12381.move.hbs  verifier_bn254.move.hbs
crates/export_aptos_verifier_core/tests/: e2e_generation_tests.rs  fixtures_tests.rs  format_parsing_tests.rs  local_verify_tests.rs  parsing_tests.rs  regression_tests.rs
examples/: README.md
examples/MulCircuit/: Cargo.toml
examples/MulCircuit/artifacts/bls12_381/: proof.json  public.json  verification_key.json
examples/MulCircuit/src/: main.rs
examples/ark-mimc/src/: main.rs
examples/gnark-native/cubic/: README.md
examples/sp1-groth16/fibonacci/: README.md
